objects/Fridge_Event__e.object
<CustomObject>
    <description>Fridgeco Event</description>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temperature__c</fullName>
        <description>in fahrenheit</description>
        <label>Temperature</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>door_open__c</fullName>
        <defaultValue>false</defaultValue>
        <label>door open</label>
        <type>Checkbox</type>
    </fields>
    <label>Fridge Event</label>
    <pluralLabel>Fridge Events</pluralLabel>
</CustomObject>